--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -21,8 +21,7 @@ jobs:
 
       - name: Determine npm cache directory
         id: npm-cache
-        run: |
-          echo "::set-output name=dir::$(npm config get cache)"
+        run: echo "dir=$(npm config get cache)" >> $GITHUB_OUTPUT
 
       - name: Restore npm cache
         uses: actions/cache@v3
@@ -32,21 +31,23 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: Hexo cli
-        run: npm install -g hexo-cli@4.3.0
-      
-      - name: Npm Install
+      - name: Install Hexo CLI
+        run: npm install -g hexo-cli@latest
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Install Theme Dependencies
         run: |
-          npm install
           cd ./themes/butterfly
-          npm install
+          npm ci
           cd ../..
 
-      - name: Build # build npm
+      - name: Build Site
         run: npm run build
 
-      - name: Pages # github pages
-        uses: JamesIves/github-pages-deploy-action@v4.3.0
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           folder: docs
