--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -49,5 +49,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages
+          branch: main
           folder: docs
