--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -10,7 +10,7 @@ menu:
   # List||fas fa-list:
   #   Music: /music/ || fas fa-music
   #   Movie: /movies/ || fas fa-video
-  LINK: /link/ || fas fa-link
+  RESUME: /resume.pdf || fas fa-file
   ABOUT: /about/ || fas fa-heart
 
 # Code Blocks (代碼相關)
